--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -83,3 +83,13 @@ ul {
     border: none;
   }
 }
+
+.mat-mdc-menu-panel .mat-mdc-menu-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  a {
+    padding: 0.5rem;
+  }
+}
